--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
         <section class="skill">
             <div class="wrapper">
                 <div class="circle-menu">
+                    <div class="circle">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <ul class="list">
                         <li class="is_on">
                             <a href="#tab1" class="btn adobe">
@@ -130,7 +135,8 @@
                         <h2>JavaScript</h2>
                         <h2>50%</h2>
                         <p>
-                            if, for, while문 등을 역할을 알고 있으며 공부하고 있습니다.
+                            if, for, while문 등을 역할을 알고 있으며 공부하고 있습니다.<br>
+                            오픈소스를 파악해 수정하여 활용할수 있습니다.
                         </p>
                     </div>
                     <div id="tab5" class="cont">
@@ -138,15 +144,10 @@
                         <h2>jQuery</h2>
                         <h2>50%</h2>
                         <p>
-                            다양한 이벤트들을 제어 할 수 있습니다.
+                            다양한 이벤트들을 제어 할 수 있습니다.<br>
+                            오픈소스를 파악해 수정하여 활용할수 있습니다.
                         </p>
                     </div>
-                </div>
-
-                <div class="circle">
-                    <div></div>
-                    <div></div>
-                    <div></div>
                 </div>
             </div>
         </section>
@@ -250,6 +251,10 @@
                                     <p>면도기 상세 페이지</p>
                                     <img src="./images/DP/DP_1.png" alt="면도기 상세페이지">
                                 </div>
+                                <div>
+                                    <p>핸드크림 상세 페이지</p>
+                                    <img src="./images/DP/DP_2.png" alt="핸드크림 상세페이지">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -309,7 +314,7 @@
 
                 <div data-group="modal-group">
                     <div class="container">
-                        <a id="bi" class="btn-px open-modal" data-modal="modal">
+                        <a id="bi_donut" class="btn-px open-modal" data-modal="modal">
                             <img src="./images/stone_5.png" class="stone_5">
                             <p class="arrow_box">BI</p>
                         </a>
@@ -321,11 +326,11 @@
                                 </div>
                                 <div>
                                     <p>도넛 플레닛</p>
-                                    <img src="./images/bi/panel.png" alt="도넛플레닛">
-                                    <img src="./images/bi/1.png">
-                                    <img src="./images/bi/2.png">
-                                    <img src="./images/bi/3.png">
-                                    <img src="./images/bi/4.png">
+                                    <img src="./images/bi_donut/panel.png" alt="도넛플레닛">
+                                    <img src="./images/bi_donut/1.png">
+                                    <img src="./images/bi_donut/2.png">
+                                    <img src="./images/bi_donut/3.png">
+                                    <img src="./images/bi_donuti/4.png">
                                 </div>
                             </div>
                         </div>
@@ -357,14 +362,32 @@
 
                 <div data-group="modal-group">
                     <div class="container">
-                        <a id="a_7" class="btn-px open-modal" data-modal="modal">
+                        <a id="bi_simmons" class="btn-px open-modal" data-modal="modal">
                             <img src="./images/stone_7.png" class="stone_7">
-                            <p class="arrow_box">LEAFLET</p>
+                            <p class="arrow_box">BI</p>
                         </a>
                         <div class="modal-wrapper" data-wrapper="modal-wrapper-medium">
                             <div class="modal-content">
-                                <h2>Inscreva-se7</h2>
-                                <img src="./images/x.png" class="close">
+                                <div class="title_border">
+                                    <h2>BI - SIMMONS</h2>
+                                    <img src="./images/x.png" class="close">
+                                </div>
+                                <div>
+                                    <p>시몬스</p>
+                                    <img src="./images/bi_simmons/logo.png" alt="시몬스">
+                                    <img src="./images/bi_simmons/1.jpg">
+                                    <img src="./images/bi_simmons/2.jpg">
+                                    <img src="./images/bi_simmons/3.jpg">
+                                    <img src="./images/bi_simmons/4.jpg">
+                                    <img src="./images/bi_simmons/5.jpg">
+                                    <img src="./images/bi_simmons/6.jpg">
+                                    <img src="./images/bi_simmons/7.jpg">
+                                    <img src="./images/bi_simmons/8.jpg">
+                                    <img src="./images/bi_simmons/9.jpg">
+                                    <img src="./images/bi_simmons/10.jpg">
+                                    <img src="./images/bi_simmons/11.jpg">
+                                    <img src="./images/bi_simmons/12.jpg">    
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -374,12 +397,16 @@
                     <div class="container">
                         <a id="a_8" class="btn-px open-modal" data-modal="modal">
                             <img src="./images/stone_8.png" class="stone_8">
-                            <p class="arrow_box">LEAFLET</p>
+                            <p class="arrow_box">Getting ready...</p>
                         </a>
                         <div class="modal-wrapper" data-wrapper="modal-wrapper-medium">
                             <div class="modal-content">
-                                <h2>Inscreva-se8</h2>
-                                <img src="./images/x.png" class="close">
+                                <div class="title_border">
+                                    <h2>Getting ready...</h2>
+                                    <img src="./images/x.png" class="close">
+                                </div>
+                                <div>
+                                </div>
                             </div>
                         </div>
                     </div>
