--- a/sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html
+++ b/sub/Treasure_Road_in_Jeju/Treasure_Road_in_Jeju.html
@@ -38,7 +38,7 @@
                                 <span class="circle" aria-hidden="true">
                                 <span class="icon arrow"></span>
                                 </span>
-                                <span class="button-text">바로가기</span>
+                                <span class="button-text">방문하기</span>
                             </button>
                         </div>
                     </a>
