--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <footer>
         <div class="fo">
             <h2>EMAIL</h2>
-            <p>khs990920@naver.com</p>
+            <p>solhan990920@gmail.com</p>
         </div>
     </footer>
 </body>
